# bpshader

./: .gitignore  CMakeLists.txt  README.md  build.emscripten.bat
include/: 3drenderer_editor.hpp  Definitions.hh  Vector.hh  Window.hpp  defs.hh  gui.hpp  imgui_styles.hxx  node_editor.hpp  node_to_glsl_interpreter.hpp  render_texture2d.hpp  renderables.hpp  shader.hpp  shader2d.hpp  shader_compiler.hpp  texture2d.hpp
shaders/: 3d_renderer_built_in_mesh_renderer_frag.glsl  3d_renderer_built_in_mesh_renderer_vert.glsl  game_of_life.glsl  gles3frag.glsl  mandelbrot.glsl  navier_stroke.glsl  notexture_frag.glsl  test_frag.glsl  test_vert.glsl  uvcolor.glsl
src/: Window.cpp  defaults.cc  main.cpp  node_editor.cpp  render_texture2d.cpp  renderables.cpp  shader.cpp  shader2d.cpp  shader_compiler.cpp  texture2d.cpp
